# src/v1/routes/admins/auth.route.js
@@ -1,0 +1,10 @@
+const { Router } = require('express')
+const bodyParser = require('body-parser')
+const router = Router()
+router.use(bodyParser.urlencoded({ extended: true }))
+router.use(bodyParser.json())
+
+const { admins } = require('../../controllers')
+router.post('/login-confirm', admins.auth.loginConfirm)
+
+module.exports = router
