# src/v1/routes/admins/index.js
@@ -1,0 +1,13 @@
+const { Router } = require('express')
+const router = Router()
+const { passport } = require('../../middlewares')
+
+const adminsPassport = passport.adminsPassport.authenticate('jwt', {
+  session: false,
+  failureRedirect: '/v1/failures/unauthorized'
+})
+router.use(passport.adminsPassport.initialize())
+router.use('/auth', require('./auth.route'))
+router.use('/organizations', adminsPassport, require('./organizations.route'))
+
+module.exports = router
